uploading badges to dropbox
Former-commit-id: 86f3fa5539e666ac8df54b92b13d19a3e350b1b8
Former-commit-id: 4890e41e69f35e735b028e8cf7fa00bb7b4eaccd [formerly 81498bcaed17ad748bdbceaaf0bd9ced753c3d40]
Former-commit-id: 95410117996363fb175bd2d9b293cf62fe089599

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,48 +14,47 @@ before_script:
   - mkdir -p badges
   - apk add --update curl && rm -rf /var/cache/apk/*
   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
-  - cd src/Server/
-  - chmod +x ci/build.sh
-  - chmod +x ci/test.sh
+  - chmod +x src/Server/ci/build.sh
+  - chmod +x src/Server/ci/test.sh
 
 build:basket_api:
   stage: build
   script:
-    - ci/build.sh basket_api
+    - src/Server/ci/build.sh basket_api
 
 build:order_api:
   stage: build
   script:
-    - ci/build.sh order_api
+    - src/Server/ci/build.sh order_api
 
 build:identity_api:
   stage: build
   script:
-    - ci/build.sh identity_api
+    - src/Server/ci/build.sh identity_api
 
 build:menu_api:
   stage: build
   script:
-    - ci/build.sh menu_api
+    - src/Server/ci/build.sh menu_api
 
 test:basket_api:
   stage: test
   script: 
-    - ci/test.sh basket_api
+    - src/Server/ci/test.sh basket_api
   dependencies:
     - build:basket_api
 
 test:identity_api:
   stage: test
   script: 
-    - ci/test.sh identity_api
+    - src/Server/ci/test.sh identity_api
   dependencies:
     - build:identity_api
 
 test:menu_api:
   stage: test
   script:
-    - ci/test.sh menu_api
+    - src/Server/ci/test.sh menu_api
   dependencies:
     - build:menu_api
   artifacts:
