--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,30 +14,47 @@ before_script:
   - apk add --update curl && rm -rf /var/cache/apk/*
   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
   - cd src/Server/
-  - chmod +x ci/upload_badge.sh
-  - chmod +x ci/generate_badge.sh
-  - chmod +x ci/build.sh
-  - chmod +x ci/test.sh
+  - chmod -R +x ci/
 
 build:basket_api:
   stage: build
   script:
+    - ci/update_build_badge.sh running basket_api
+    - echo "failure" > basket_status.txt
     - ci/build.sh basket_api
+    - echo "success" > basket_status.txt
+  after_script:
+    - ci/update_build_badge.sh `cat basket_status.txt` basket_api
 
 build:order_api:
   stage: build
   script:
+    - ci/update_build_badge.sh running order_api
+    - echo "failure" > order_status.txt
     - ci/build.sh order_api
+    - echo "success" > order_status.txt
+  after_script:
+    - ci/update_build_badge.sh `cat order_status.txt` order_api
 
 build:identity_api:
   stage: build
   script:
+    - ci/update_build_badge.sh running identity_api
+    - echo "failure" > identity_status.txt
     - ci/build.sh identity_api
+    - echo "success" > identity_status.txt
+  after_script:
+    - ci/update_build_badge.sh `cat identity_status.txt` identity_api
 
 build:menu_api:
   stage: build
   script:
+    - ci/update_build_badge.sh running identity_api
+    - echo "failure" > menu_status.txt
     - ci/build.sh menu_api
+    - echo "success" > menu_status.txt
+  after_script:
+    - ci/update_build_badge.sh `cat menu_status.txt` identity_api
 
 test:basket_api:
   stage: test
