badge color changed
Former-commit-id: 7e65d5d67be7b89895d7e1b515f3c589d1fd8c0c
Former-commit-id: cd63893782e1c626d24f6340dd518ab7ed08531c [formerly 69bb27a086733e831704d31ce9b79b18e6f52a1c]
Former-commit-id: 47914aad825a464fba74a04762d07e120e9038ea

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,7 +49,7 @@ build:identity_api:
 build:menu_api:
   stage: build
   script:
-    - ci/update_build_badge.sh running identity_api
+    - ci/update_build_badge.sh running menu_api
     - echo "failure" > menu_status.txt
     - ci/build.sh menu_api
     - echo "success" > menu_status.txt
