test deploy changes
Former-commit-id: 82c90c2912e51c6f7fdf394a92d88175398169c7
Former-commit-id: 70610b9c19d823ee081b705cca7093808cf0856d [formerly b67419507df6b7906179da0baaea628f0808ab05]
Former-commit-id: 4a9782b929e819b820eaed073b63e397aafa1eb1

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build:basket_api:
     - ci/build.sh basket_api
     - echo "success" > basket_status.txt
   after_script:
-    - ls -al
+    - cd src/Server/
     - ci/update_build_badge.sh `cat basket_status.txt` basket_api
 
 build:order_api:
@@ -35,7 +35,7 @@ build:order_api:
     - ci/build.sh order_api
     - echo "success" > order_status.txt
   after_script:
-    - ls -al
+    - cd src/Server/
     - ci/update_build_badge.sh `cat order_status.txt` order_api
 
 build:identity_api:
@@ -46,7 +46,7 @@ build:identity_api:
     - ci/build.sh identity_api
     - echo "success" > identity_status.txt
   after_script:
-    - ls -al 
+    - cd src/Server/
     - ci/update_build_badge.sh `cat identity_status.txt` identity_api
 
 build:menu_api:
@@ -57,7 +57,7 @@ build:menu_api:
     - ci/build.sh menu_api
     - echo "success" > menu_status.txt
   after_script:
-    - ls -al
+    - cd src/Server/
     - ci/update_build_badge.sh `cat menu_status.txt` identity_api
 
 test:basket_api:
