readme and ci.yml changes
Former-commit-id: 107a76ef8368b79ea8f8a234074403ae72b4b76c
Former-commit-id: 7691b4c306e76e4f37c9fc86fc078afcbac81e52 [formerly 7964c34c04253581ade681cd528283ebcfa53e59]
Former-commit-id: d106c3a14f66115acd16116fe85c43eedf6a5c6b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,7 @@ build:menu_api:
     - echo "success" > menu_status.txt
   after_script:
     - cd src/Server/
-    - ci/update_build_badge.sh `cat menu_status.txt` identity_api
+    - ci/update_build_badge.sh `cat menu_status.txt` menu_api
 
 test:basket_api:
   stage: test
