all services running in docker compose
Former-commit-id: 4996389f156bb941bfce2fa496aa17fab83352ba
Former-commit-id: 0ee1beb7589df026b5efc811ddaf1b0339d44e7a [formerly f3177b810fd16bbf3994a9413ef881489f2654fc]
Former-commit-id: ab14e71865e2ddd3386ffaa9045f2d66b4bb3946

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -13,9 +13,10 @@ services:
 
   order-api:
     environment: 
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://order-data:5432/orderdb
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://order_data:5432/orderdb
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=Passw0rd!
+      - SERVER_PORT=8080
 
   menu-data:
     environment:
@@ -30,9 +31,9 @@ services:
       - POSTGRES_USER=admin
       - PGDATA=/pg
       - POSTGRES_DB=identitydb
-  order-data:
+  
+  order_data:
     environment:
-      - CREATED_DATABASE=orderdb
       - POSTGRES_PASSWORD=Passw0rd!
       - POSTGRES_USER=admin
       - PGDATA=/pg
