--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -3,17 +3,17 @@ version: '3.7'
 services:
   identity-api:
     image: restaurant/identity
-    build: ./services/netcore/Identity.API/
+    build: ./services/netcore/Identity/
     ports:
-       - "5000:5000"
+       - "5000:80"
     depends_on:
        - identity-data
 
   menu-api:
     image: restaurant/menu
-    build: ./services/netcore/Menu.API/
+    build: ./services/netcore/Menu/
     ports:
-       - "5100:5100"
+       - "5100:80"
     depends_on:
        - menu-data
   
@@ -29,9 +29,9 @@ services:
     image: restaurant/order
     build: ./services/java/order.api/
     ports:
-      - "5300:5300"
+      - "5300:8080"
     depends_on:
-      - order-data
+      - order_data
 
   menu-data:
     image: postgres:alpine
@@ -41,9 +41,6 @@ services:
 
   basket-data:
     image: redis:alpine
-  
-  order-data:
-    image: restaurant/order_database
-    build: 
-      context: ./services/java/order.api/
-      dockerfile: Dockerfile-database
+
+  order_data:
+    image: postgres:alpine
