--- a/src/Server/services/java/order.api/Dockerfile
+++ b/src/Server/services/java/order.api/Dockerfile
@@ -10,7 +10,7 @@ RUN gradle build --stacktrace
 
 FROM java:alpine
 WORKDIR /root/
-COPY --from=builder /usr/src/ordering_api/build/libs/order.api-0.0.1-SNAPSHOT.jar .
+COPY --from=builder /usr/src/ordering_api/build/libs/order.api.jar .
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "./order.api-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-jar", "./order.api.jar"]
