orders api changes on controllers
Former-commit-id: 2bf5028400ff20966db812dadb6f3bcb82d3f8fa
Former-commit-id: 0e2939715177064c7c814d16acf5f087f0cdd88f [formerly a997caec53a5e0d7dc7e8ed39273d911686e0d2e]
Former-commit-id: 3f8c0489675a2cb6f7cf9cc97431c28770dd9edb

--- a/src/Server/services/java/order.api/src/main/resources/application.properties
+++ b/src/Server/services/java/order.api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_orders_database
 spring.datasource.username= jurabek
