DevOps/basket api migrated to golang 1.11 version and badges uploading to s3
Former-commit-id: f253a6406aac9dc0ea33b7a524748c203a99026f
Former-commit-id: 724915e39e329de7893a7fb27b5949471a3132e1 [formerly c0702a6aae9f96bcd0610caedaa75de42bbbe19a]
Former-commit-id: 319111002c69ba1a2278dd5765b0290c59465cd3

--- a/.gitignore
+++ b/.gitignore
@@ -217,6 +217,5 @@ ModelManifest.xml
 Images/
 *.idea/
 *.a
-src/Server/services/go/src/gopkg.in
-src/Server/services/go/src/github.com
 src/Server/services/go/src/basket.api/main
+src/Server/services/go/pkg
