order api running tests in docker
Former-commit-id: de40152d8d2f50b6dd729ef4b72884d1b5912c3d
Former-commit-id: c234a719c716038fa8e3a9bf9eccab0f0cfa90d3 [formerly e46a1f5979319116559fddd7a748ab109d3b6b2b]
Former-commit-id: 5b37807122fd764c9e830575fcb1474fdba8dbdd

--- a/src/Server/services/order.api/Dockerfile
+++ b/src/Server/services/order.api/Dockerfile
@@ -1,16 +1,14 @@
-FROM gradle:4.2.1-jdk8-alpine AS builder
+FROM java:alpine AS builder
 
 COPY . /usr/src/ordering_api
 WORKDIR /usr/src/ordering_api
 
-USER root
-RUN chown -R gradle /usr/src/ordering_api
-USER gradle
-RUN gradle build --stacktrace
+RUN ./gradlew build -x test
 
 FROM java:alpine
 WORKDIR /root/
 COPY --from=builder /usr/src/ordering_api/build/libs/order.api.jar .
+COPY --from=builder /usr/src/ordering_api/build/libs/order.api-tests.jar .
 
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "./order.api.jar"]
+CMD ["java", "-jar", "./order.api.jar"]
