added orders_api_tests to pipeline
Former-commit-id: d05a125e97a2c66f61233b51475efb1bdd1051f0
Former-commit-id: 70137aff664dfcf632fe1005e15119e4330d6d29 [formerly a382b0b15bcff2ae2863d52d9eb21e4384959d55]
Former-commit-id: 86e85b5f3c709b9d3cac34423a3042f99d96ab8a

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -83,3 +83,10 @@ test:menu_api:
     - ci/test.sh menu_api
   dependencies:
     - build:menu_api
+
+test:order_api:
+  stage: test
+  script:
+    - ci/test.sh order_api
+  dependencies:
+    - build:order_api
