--- a/src/Server/services/identity.api/Identity.API/Identity.API.csproj
+++ b/src/Server/services/identity.api/Identity.API/Identity.API.csproj
@@ -7,6 +7,7 @@
     <Folder Include="wwwroot\" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="2.1.0" />
     <PackageReference Include="Polly" Version="5.6.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
     <PackageReference Include="Autofac" Version="4.8.1" />
