Docker compose changes
Former-commit-id: b8d43d93cbb0e4face11782c28b41f42caab0d1b
Former-commit-id: 322e6cc5622d721f98d94f76b6cfc1785a5d4c8a [formerly f9a334f1159405eb9f26fbead3a2b9f1aa34a4b3]
Former-commit-id: 512c34661a1f46ea033b4a2c12b29b22e98ab021

--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -4,37 +4,30 @@ services:
   menu-api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__MenuDatabaseConnectionString=Host=menu-data;Database=menu_database;Username=admin;Password=Passw0rd!
+      - ConnectionStrings__MenuDatabaseConnectionString=Host=pgsql;Database=menu_database;Username=admin;Password=Passw0rd!
   
   identity-api:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__IdentityConnectionString=Host=identity-data;Database=identity_database;Username=admin;Password=Passw0rd!
+      - ConnectionStrings__IdentityConnectionString=Host=pgsql;Database=identity_database;Username=admin;Password=Passw0rd!
 
   order-api:
     environment: 
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://order_data:5432/orderdb
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://pgsql:5432/orderdb
       - SPRING_DATASOURCE_USERNAME=admin
       - SPRING_DATASOURCE_PASSWORD=Passw0rd!
       - SERVER_PORT=8080
 
-  menu-data:
+  pgsql:
     environment:
       - POSTGRES_PASSWORD=Passw0rd!
       - POSTGRES_USER=admin
       - PGDATA=/pg
       - POSTGRES_DB=menudb
-  
-  identity-data:
+
+  gateway-api:
     environment:
-      - POSTGRES_PASSWORD=Passw0rd!
-      - POSTGRES_USER=admin
-      - PGDATA=/pg
-      - POSTGRES_DB=identitydb
-  
-  order_data:
-    environment:
-      - POSTGRES_PASSWORD=Passw0rd!
-      - POSTGRES_USER=admin
-      - PGDATA=/pg
-      - POSTGRES_DB=orderdb
+      - ZUUL_ROUTES_MENU_URL=menu-api
+      - ZUUL_ROUTES_identity.url=identity-api
+      - ZUUL_ROUTES_basket.url=basket-api
+      - ZUUL_ROUTES_order.url=order-api
