--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -19,5 +19,21 @@
       "Admin",
       "Member"
     ]
+  },
+  "spring": {
+    "application": {
+      "name": "identity-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldRegisterWithEureka": true,
+      "shouldFetchRegistry": false
+    },
+    "instance": {
+      "port": 5000,
+      "isInstanceEnabledOnInit": true
+    }
   }
 }
