--- a/src/Server/services/menu.api/Menu.API/appsettings.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.json
@@ -1,12 +1,36 @@
 {
-  "IdentityUrl" : "http://localhost:5000",
-  "ConnectionStrings" : {
-    "MenuDatabaseConnectionString" : "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
+  "IdentityUrl": "http://localhost:5000",
+  "ConnectionStrings": {
+    "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
   },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information",
+      "Pivotal": "Debug",
+      "Steeltoe": "Debug"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "spring": {
+    "application": {
+      "name": "menu-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldRegisterWithEureka": true,
+      "shouldFetchRegistry": false,
+      "ValidateCertificates":  false
+    },
+    "instance": {
+      "hostname": "localhost",
+      "ipAddress": "127.0.0.1",
+      "port": 5000
+    }
+  }
 }
