--- a/src/Server/services/order.api/src/main/resources/application.properties
+++ b/src/Server/services/order.api/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+server.port=8090
+
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant_orders_database
-spring.datasource.username= jurabek
+spring.datasource.username=jurabek
 spring.datasource.password=
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.port = 8090
+
+spring.application.name=order-service
+
+eureka.client.serviceUrl.defaultZone=http://${registry.host:localhost}:${registry.port:8761}/eureka/
