--- a/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
+++ b/src/Server/gateway/restaurant-gateway/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 #Will start the gateway server @8080
 server:
-  port=8080
+  port: 8080
 
 spring:
   application:
@@ -9,7 +9,7 @@ spring:
 #Ribbon is auto integrated with Zuul and for this exercise we are not using that.
 ribbon:
   eureka:
-    enabled: false
+    enabled: enabled
  
 #Zuul routes. Here for /student path, we are routing to localhost:8090 with extra path after that.
 # urls will be ovveriding from docker-compose or kubernetes
@@ -17,5 +17,19 @@ ribbon:
 zuul:
   routes:
     menu:
-      path: /menu/** 
-      url: http://localhost:5200
+      path: /menu/**
+      serviceId: menu-service
+    order:
+      path: /order/**
+      serviceId: order-service
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://${registry.host:localhost}:${registry.port:8761}/eureka/
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
