--- a/src/Server/services/menu.api/Menu.API/Menu.API.csproj
+++ b/src/Server/services/menu.api/Menu.API/Menu.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Pivotal.Discovery.ClientCore" Version="2.1.0" />
     <PackageReference Include="Polly" Version="5.6.1" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="AutoMapper" Version="7.0.1" />
