--- a/src/Server/services/menu.api/Menu.API/appsettings.Development.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.Development.json
@@ -1,9 +1,35 @@
 {
+  "IdentityUrl": "http://localhost:5000",
+  "ConnectionStrings": {
+    "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
+  },
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
       "Default": "Debug",
       "System": "Information",
-      "Microsoft": "Information"
+      "Microsoft": "Information",
+      "Default": "Warning",
+      "Pivotal": "Debug",
+      "Steeltoe": "Debug"
+    }
+  },
+  "AllowedHosts": "*",
+
+  "spring": {
+    "application": {
+      "name": "menu-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldRegisterWithEureka": true,
+      "shouldFetchRegistry": false
+    },
+    "instance": {
+      "port": 5000,
+      "isInstanceEnabledOnInit": true
     }
   }
 }
