--- a/src/Server/services/order.api/build.gradle
+++ b/src/Server/services/order.api/build.gradle
@@ -40,6 +40,7 @@ repositories {
 }
 
 dependencies {
+	compile('org.springframework.cloud:spring-cloud-starter-netflix-eureka-client')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile('org.postgresql:postgresql:42.2.5')
@@ -48,4 +49,10 @@ dependencies {
 	compile('org.modelmapper:modelmapper:2.3.0')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('org.mockito:mockito-core:2.+')
+}
+
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Finchley.SR2'
+	}
 }
