--- a/src/Server/gateway/restaurant-service-discovery/Dockerfile
+++ b/src/Server/gateway/restaurant-service-discovery/Dockerfile
@@ -1,13 +1,20 @@
-FROM java:alpine AS builder
+# FROM java:alpine AS builder
 
-COPY . /usr/src/service-discovery
-WORKDIR /usr/src/service-discovery
+# COPY . /usr/src/service-discovery
+# WORKDIR /usr/src/service-discovery
 
-RUN ./gradlew build -x test
+# RUN ./gradlew build -x test
+
+# FROM java:alpine
+# WORKDIR /root/
+# COPY --from=builder /usr/src/service-discovery/build/libs/restaurant-service-discovery-0.0.1-SNAPSHOT.jar .
+
+# EXPOSE 8761
+# CMD ["java", "-jar", "./restaurant-service-discovery-0.0.1-SNAPSHOT.jar"]
+
 
 FROM java:alpine
-WORKDIR /root/
-COPY --from=builder /usr/src/service-discovery/build/libs/restaurant-service-discovery-0.0.1-SNAPSHOT.jar .
 
+ADD build/libs/restaurant-service-discovery-0.0.1-SNAPSHOT.jar service-discovery.jar
+ENTRYPOINT ["java", "-jar", "/service-discovery.jar"]
 EXPOSE 8761
-CMD ["java", "-jar", "./restaurant-service-discovery-0.0.1-SNAPSHOT.jar"]
