--- a/src/Server/services/identity.api/Identity.API/appsettings.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.json
@@ -29,11 +29,11 @@
     "client": {
       "serviceUrl": "http://localhost:8761/eureka/",
       "shouldRegisterWithEureka": true,
-      "shouldFetchRegistry": false
+      "shouldFetchRegistry": false,
+      "ValidateCertificates":  false
     },
     "instance": {
-      "port": 5000,
-      "isInstanceEnabledOnInit": true
+      "port": 5000
     }
   }
 }
