--- a/src/Server/docker-compose.yml
+++ b/src/Server/docker-compose.yml
@@ -12,23 +12,17 @@ services:
     build: ./gateway/restaurant-gateway/
     ports: 
       - "8080:8080"
-    depends_on: 
-      # - identity-api
-      # - menu-api
-      # - basket-api
-      - order-api
+    depends_on:
       - service-discovery
-     
-  # identity-api:
-  #   image: restaurant/identity
-  #   build: ./services/identity.api/
-  #   ports:
-  #      - "5000:80"
-  #   depends_on:
-  #      - pgsql
-  #      - discovery
-  #   links:
-  #     - discovery:discovery
+
+  identity-api:
+    image: restaurant/identity
+    build: ./services/identity.api/
+    ports:
+       - "5000:80"
+    depends_on:
+       - pgsql
+       - service-discovery
 
   menu-api:
     image: restaurant/menu
@@ -39,14 +33,14 @@ services:
        - pgsql
        - service-discovery
 
-  # basket-api:
-  #   image: restaurant/basket
-  #   build: ./services/basket.api/
-  #   ports:
-  #     - "5200:5200"
-  #   depends_on:
-  #     - redis
-  #     - service-discovery
+  basket-api:
+    image: restaurant/basket
+    build: ./services/basket.api/
+    ports:
+      - "5200:5200"
+    depends_on:
+      - redis
+      - service-discovery
 
   order-api:
     image: restaurant/order
