--- a/src/Server/services/identity.api/Identity.API/appsettings.Development.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.Development.json
@@ -1,9 +1,39 @@
 {
+
+  "ConnectionStrings": {
+    "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
+  },
+
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "UserSettings": {
+    "AdminUserName": "admin",
+    "AdminEmail": "admin@inbox.com",
+    "AdminPassword": "Test@123",
+    "ApiUrl": "",
+    "DefaultRoles": [
+      "Admin",
+      "Member"
+    ]
+  },
+  "spring": {
+    "application": {
+      "name": "identity-service"
+    }
+  },
+  "eureka": {
+    "client": {
+      "serviceUrl": "http://localhost:8761/eureka/",
+      "shouldRegisterWithEureka": true,
+      "shouldFetchRegistry": false,
+      "ValidateCertificates":  false
+    },
+    "instance": {
+      "port": 5000
     }
   }
 }
