--- a/src/Server/services/menu.api/Menu.API/appsettings.Development.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.Development.json
@@ -9,7 +9,6 @@
       "Default": "Debug",
       "System": "Information",
       "Microsoft": "Information",
-      "Default": "Warning",
       "Pivotal": "Debug",
       "Steeltoe": "Debug"
     }
@@ -25,11 +24,11 @@
     "client": {
       "serviceUrl": "http://localhost:8761/eureka/",
       "shouldRegisterWithEureka": true,
-      "shouldFetchRegistry": false
+      "shouldFetchRegistry": false,
+      "ValidateCertificates":  false
     },
     "instance": {
-      "port": 5000,
-      "isInstanceEnabledOnInit": true
+      "port": 5000
     }
   }
 }
