gateway projects added to gitlab pipelin
Former-commit-id: 82a7f01c2a570a49cb5d697b7e70eda17653a892
Former-commit-id: 2494408e25302d75fc14f0633eedf9eb424d3689 [formerly d0caa212a9eaf8f5515fd295e518bb33323e0d39]
Former-commit-id: 8e67131b77f970c38c4eca5d5e06adfd0679de0b

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,16 @@ before_script:
   - cd src/Server/
   - chmod -R +x ci/
 
+build:gateway_api:
+  stage: build
+  script:
+    - ci/build.sh gateway_api
+
+build:service_discovery:
+  stage: build
+  script:
+    - ci/build.sh service_discovery
+
 build:basket_api:
   stage: build
   script:
