gradle cache in Gitlab CI
Former-commit-id: ce0f757bcf42b549091161e6797c17c99c4ed662
Former-commit-id: a5065fc5ad6d7b6860ef59b20d2319cf41dc6635 [formerly 1efc3bd9217dccdb191e9ad028fcf52e332957ed]
Former-commit-id: 883ea11e974021ca669ff2f2bf6fad8ba1ea23a6

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,14 +18,23 @@ before_script:
   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
   - cd src/Server/
   - chmod -R +x ci/
+  - export GRADLE_USER_HOME=$(pwd)/.gradle
+
+cache:
+  key: "$CI_PROJECT_NAME"
+  paths:
+    - .gradle/wrapper
+    - .gradle/caches  
 
 build:gateway_api:
   stage: build
+  image: openjdk:8-jdk-alpine
   script:
     - ci/build.sh gateway_api
 
 build:service_discovery:
   stage: build
+  image: openjdk:8-jdk-alpine
   script:
     - ci/build.sh service_discovery
 
