--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,12 +10,16 @@ stages:
 variables:
   IMAGE_BASE_NAME: registry.gitlab.com/jurabek/restaurant-app
 
-before_script:
-  - apk add --update curl && rm -rf /var/cache/apk/*
-  - apk add --update git && rm -rf /var/cache/apk/*
-  - apk add --no-cache curl jq python py-pip
-  - pip install awscli
+.before_script_docker_login: &login_docker
+  before_script:
   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
+    
+
+before_script:
+  # - apk add --update curl && rm -rf /var/cache/apk/*
+  # - apk add --update git && rm -rf /var/cache/apk/*
+  # - apk add --no-cache curl jq python py-pip
+  # - pip install awscli
   - cd src/Server/
   - chmod -R +x ci/
   - export GRADLE_USER_HOME=$(pwd)/.gradle
