before_script removed
Former-commit-id: 40ddb3eac8e9314ff3520f3a0ad4e451d1523fc6
Former-commit-id: a92c419f001964d28694c21e5a5cf1663c03f60c [formerly 175abf3e2f7607233185cf09b03c94fd5f2309ad]
Former-commit-id: df2ffe8defa28dbceb75a49e9f2c3557b3280c27

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ stages:
 variables:
   IMAGE_BASE_NAME: registry.gitlab.com/jurabek/restaurant-app
 
-.before_script_docker_login: &login_docker
-  before_script:
-  - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
+# .before_script_docker_login: &login_docker
+#   before_script:
+#   - docker login registry.gitlab.com -u "$DOCKER_USER_NAME" -p $DOCKER_PASSWORD
     
 
 before_script:
