cache working test it
Former-commit-id: 7434041e928f6ae701cbe132dde40b7bc827818a
Former-commit-id: 43f601ef09cd67f82a22e89810c3c8a069ac43a0 [formerly 8de1a1e15525d696337fbab90e12040ba21a49eb]
Former-commit-id: 82504f547ce63a0984931692cea0675f47ddad89

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ before_script:
   # - apk add --no-cache curl jq python py-pip
   # - pip install awscli
   - export GRADLE_USER_HOME=`pwd`/.gradle
+  - export NUGET_PACKAGES=$(pwd)/.nuget  
   - cd src/Server/
   - chmod -R +x ci/
 
@@ -28,13 +29,17 @@ cache:
   key: "$CI_PROJECT_NAME"
   paths:
     - .gradle/wrapper
-    - .gradle/caches  
+    - .gradle/caches
+    - .nuget/  
 
 build:gateway_api:
   stage: build
   image: openjdk:8-jdk-alpine
   script:
     - ci/build.sh gateway_api
+
+
+
 
 build:service_discovery:
   stage: build
